[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dynon-efis-d100-serial-data-output-parser"
version = "0.0.0"
description = "Parse a Dynon EFIS D100 RS-232 serial dump into CSV."
requires-python = ">=3.10"

[tool.setuptools]
# Single-script project: the only importable module is parse.py. State it
# explicitly so setuptools doesn't try (and fail) to auto-discover among the
# other top-level files such as test_parse.py.
py-modules = ["parse"]

[project.optional-dependencies]
# Development / test dependencies. Install with:
#   pip install -e ".[dev]"   (or simply: pip install pytest)
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-ra"
