[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dynon-efis-d100-serial-data-output-parser"
version = "0.0.0"
description = "Parse a Dynon EFIS D100 RS-232 serial dump into CSV."
requires-python = ">=3.14"

[tool.setuptools]
# The importable modules are parse.py (the parser) and charts.py (the optional
# chart renderer). State them explicitly so setuptools doesn't try (and fail)
# to auto-discover among the other top-level files such as test_parse.py.
py-modules = ["parse", "charts"]

[project.optional-dependencies]
# The parser itself has no third-party runtime dependencies. These extras are
# only needed for the optional tooling around it.
#
# Charting (charts.py). Install with:
#   pip install -e ".[charts]"
charts = ["pandas>=2", "matplotlib>=3.8"]
# Development / test dependencies. Install with:
#   pip install -e ".[dev]"   (or simply: pip install pytest)
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-ra"
